--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -1,28 +1,39 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     {% block htmlhead -%}
     <title>{% block title %}Home{% endblock %}</title>
     <link rel="alternate" href="/feed.atom" title="Recent Blog Posts" type="application/atom+xml">
+    <link href="/static/style.css" rel="stylesheet" type="text/css" />
+    <!-- <script type="text/javascript" src="/static/js/jquery-1.7.2.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="/static/js/utils.js"></script> -->
     {%- for link in links %}
     <link rel="{{ link.rel }}" href="{{ link.href }}"{% if link.media %} media="{{ link.media }}"{% endif %} type="{{ link.type }}">
     {%- endfor -%}
     {%- endblock %}
 </head>
+
 <body>
-<div class="container">
-  <div class="header">
-    <div class="navigation">
+<div id="container">
+  <div id="header">
+  	<a href="/"><h1 id="logo">Raido</h1></a>
     <ul>
-      <li><a href="/">blog</a>
-      <li><a href="/archive/">archive</a>
-      <li><a href="/tags/">tags</a>
+      <li><a href="/">Blog</a>
+      <li><a href="/archive/">Archive</a>
+      <li><a href="/tags/">Tags</a>
     </ul>
-    </div>
   </div>
-  <div class="content">
-  {%- block body -%}{%- endblock -%}
+
+  <div id="containter2">
+    <div id="content">
+      {%- block body -%}{%- endblock %}
+    </div>
+    <div id="footer">
+      <p>Copyright &copy; Mike Grozak<br/></p>
+      <p id="infolio">Создание сайта &mdash; <a href="http://mike.grozak.com/">Mike Grozak</a></p>
+    </div>
   </div>
 </div>
 </body>
