--- a/_templates/tagcloud.html
+++ b/_templates/tagcloud.html
@@ -1,11 +1,15 @@
 {% extends "layout.html" %}
+
+{% set active_page='Tags' %}
+
 {% block title %}Tags{% endblock %}
 {% block body %}
-  <h1>Tags</h1>
-  <ul class=tagcloud>
-  {%- for tag in get_tags(limit=50) %}
-    <li><a href="{{ link_to('tag', tag=tag.name) }}" style="font-size: {{
-      tag.size }}%">{{ tag.name }}</a>
-  {%- endfor %}
+  <div id="inline-list">
+  <ul>
+      {%- for tag in get_tags(limit=50) %}
+        <li><a href="{{ link_to('tag', tag=tag.name) }}" style="font-size: {{
+          tag.size }}%">{{ tag.name }}</a></li>
+      {%- endfor %}
   </ul>
+  </div>
 {% endblock %}
