--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -6,9 +6,8 @@
     <title>{% block title %}Home{% endblock %}</title>
     <link rel="alternate" href="/feed.atom" title="Recent Blog Posts" type="application/atom+xml">
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
-    <!-- <script type="text/javascript" src="/static/js/jquery-1.7.2.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="/static/js/utils.js"></script> -->
+    <script type="text/javascript" src="/static/js/jquery-1.7.2.js"></script>
+    <script type="text/javascript" src="/static/js/utils.js"></script>
     {%- for link in links %}
     <link rel="{{ link.rel }}" href="{{ link.href }}"{% if link.media %} media="{{ link.media }}"{% endif %} type="{{ link.type }}">
     {%- endfor -%}
