--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -42,7 +42,7 @@
 
     <div id="footer">
       <p>Copyright &copy; Mike Grozak<br/></p>
-      <p id="infolio">Создание сайта &mdash; <a href="http://mike.grozak.com/">Mike Grozak</a></p>
+      <p id="created">Created by <a href="http://mike.grozak.com/">Mike Grozak</a></p>
     </div>
   </div>
 </div>
