--- a/_templates/tag.html
+++ b/_templates/tag.html
@@ -1,11 +1,15 @@
 {% extends "layout.html" %}
+
+{% set active_page='Tags' %}
+
 {% block title %}Entries tagged “{{ tag.name }}”{% endblock %}
+
 {% block body %}
-  <h1>Entries <a href="{{ link_to('tagcloud') }}">tagged</a> “{{ tag.name }}”</h1>
-  <ul>
+  <h2 class="fwnormal">Entries tagged with <a href="#">{{ tag.name }}</a>:</h2>
+  <ul class="details">
   {%- for entry in entries %}
-    <li><a href="{{ link_to('page', slug=entry.slug) }}">{{ entry.title }}</a>
-    {%- if entry.pub_date %}, written on {{ format_date(entry.pub_date, format='long') }}{% endif %}
+    <li><h2><a href="{{ link_to('page', slug=entry.slug) }}" class="uline">{{ entry.title }}</a></h2>
+    {%- if entry.pub_date %}<p class="date">written on {{ format_date(entry.pub_date, format='long') }}</p>{% endif %}</li>
   {%- endfor %}
   </ul>
 {% endblock %}
