added 'yellow tape' post; fixed styles for nested lists within main-text div;fixed md_display template

--- a/_templates/md_display.html
+++ b/_templates/md_display.html
@@ -9,7 +9,7 @@
   <h1 class="title">{{ md.html_title }}{%- endif %}</h1>
 
   {% if ctx.pub_date %}
-  <p class="date">written on {{ format_date(ctx.pub_date, format='full') }}
+  <p class="date">written on {{ format_date(ctx.pub_date, format='full') }}</p>
   {% endif %}
 
   <div id="main-text">
