--- a/_templates/_pagination.html
+++ b/_templates/_pagination.html
@@ -1,12 +1,10 @@
 <div id="pagination">
   <ul>
   {% if pagination.has_prev -%}
-    <li class="active"><a href="{{
-      link_to(pagination.url_key,page=pagination.page - 1) }}">&laquo; Newer Posts</a></li>
+    <li class="active"><a href="{{link_to(pagination.url_key,page=pagination.page - 1)}}">&lt;&lt; Newer Posts</a></li>
   {%- endif %}
   {% if pagination.has_next -%}
-    <li class="active"><a href="{{
-      link_to(pagination.url_key,page=pagination.page + 1) }}">Older Posts &raquo;</a></li>
+    <li class="active"><a href="{{link_to(pagination.url_key,page=pagination.page + 1)}}">Older Posts &gt;&gt;</a></li>
   {%- endif %}
   </ul>
 </div>
