added quick post about servo control using atmega328 controller

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Home{% endblock %}</title>
     <link rel="alternate" href="/feed.atom" title="Recent Blog Posts" type="application/atom+xml">
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
+    <link href="/static/pygments.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="/static/js/jquery-1.7.2.js"></script>
     <script type="text/javascript" src="/static/js/utils.js"></script>
     {%- for link in links %}
