--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -28,7 +28,7 @@
 <body>
 <div id="container">
   <div id="header">
-  	<a href="/"><h1 id="logo">Raido</h1></a>
+    <!--<a href="/"><h1 id="logo">Raido</h1></a>-->
     <ul>
       {% for href,title,caption in navigation_bar -%}
         {{ menu_field(href,title,caption,active_page) }}
