--- a/_templates/tagcloud.html
+++ b/_templates/tagcloud.html
@@ -8,7 +8,7 @@
   <ul>
       {%- for tag in get_tags(limit=50) %}
         <li><a href="{{ link_to('tag', tag=tag.name) }}" style="font-size: {{
-          tag.size }}%">{{ tag.name }}</a></li>
+          tag.size + (tag.size % 100)*1.5 }}%">&#35;{{ tag.name }}</a></li>
       {%- endfor %}
   </ul>
   </div>
