various changes in styles

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -20,7 +20,7 @@
 {% set navigation_bar = [
   ('/', 'Blog', 'Blog'),
   ('/archive/','Archive','Archive'),
-  ('/tags/','Tags','Tags'),
+  ('/tags/','Categories','Categories'),
 ] -%}
 
 {% set active_page = active_page | default('Blog') -%}
