--- a/_templates/tagcloud.html
+++ b/_templates/tagcloud.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
-{% set active_page='Tags' %}
+{% set active_page='Categories' %}
 
-{% block title %}Tags{% endblock %}
+{% block title %}Categories{% endblock %}
 {% block body %}
   <div id="inline-list">
   <ul>
