--- a/_templates/tag.html
+++ b/_templates/tag.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 
-{% set active_page='Tags' %}
+{% set active_page='Categories' %}
 
 {% block title %}Entries tagged “{{ tag.name }}”{% endblock %}
 
 {% block body %}
-  <ul class="details"><li><h2 class="fwnormal">::&nbsp;<a
-      href="#" class="uline">{{ tag.name }}</a></h2>
+  <ul class="details"><li><h2 class="fwnormal">&#35;<a
+        href="#" class="uline">{{ tag.name }}</a></h2>
   <ul>
   {%- for entry in entries %}
-    <li><p><a href="{{ link_to('page', slug=entry.slug) }}" class="uline">{{entry.title }}</a></p>
+  <li><p><a href="{{ link_to('page', slug=entry.slug) }}">{{entry.title}}</a></p>
     {%- if entry.pub_date %}<p class="date">written on {{ format_date(entry.pub_date, format='long') }}</p>{% endif %}</li>
   {%- endfor %}
   </li>
