started indexing of old elektor issues

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -19,6 +19,7 @@
 
 {% set navigation_bar = [
   ('/', 'Blog', 'Blog'),
+  ('/2015/10/08/old_elektor_index/', 'Old Elektor', 'Old Elektor'),
   ('/archive/','Archive','Archive'),
   ('/tags/','Categories','Categories'),
 ] -%}
